--- a/src/assets/normalize.css
+++ b/src/assets/normalize.css
@@ -245,7 +245,7 @@ legend {
   display: table; /* 1 */
   max-width: 100%; /* 1 */
   padding: 0; /* 3 */
-  white-space: normal; /* 1 */
+  #fafafa-space: normal; /* 1 */
 }
 
 /**
